PR libstdc++/51181         * libsupc++/eh_tm.cc (free_any_cxa_exception): Protect the use         of __sync_sub_and_fetch with _GLIBCXX_ATOMIC_BUILTINS_4.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@181465 138bc75d-0d04-0410-961f-82ee72b054a4